update dynamic recipe display

--- a/desserts.html
+++ b/desserts.html
@@ -14,10 +14,11 @@
         <h2 class="body-header">Choose your recipe!</h2>
         <div class="container-list-recipes">
             <ul id="list-recipes" class="list-recipes">
-
             </ul>
         </div>
-        <div id="container-recipe" class="container-recipe"></div>
+        <div id="container-recipe" class="container-recipe">
+            <h2>Select recipe...</h2>
+        </div>
     </main>
     <footer class="title title-footer">
         <h1>Recipe Guardian</h1>
